checking things off the todo list

--- a/TexturePackHub/todo
+++ b/TexturePackHub/todo
@@ -16,7 +16,7 @@ TODO:
     - Move PPP to 1.19 as well as 1.16
     
     ../pricing/
-    - Make a messaging system with fields for game version (dropdown), type of pack (check boxes), amount of colors (dropdown), amount of textures changed (slider), auto price calculator (js), email (text box [tiny] w/ vaildator), preferred name (text box [small]), notes (text box [large])
+    - Make a messaging system with fields for game version (dropdown), type of pack (check boxes), amount of colors (dropdown), amount of textures changed (slider), auto price calculator (js), email (text box [tiny]), preferred name (text box), notes (text box)
     
     ../artists/
     - Recruit new artists to list packs on the site
